<resources>
    <string name="app_name">First Project In Kotlin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rootLayout">Hello blank fragment</string>
    <string name="disconneted">Disconneted</string>
    <string name="about_disconnected">wake up your internet connection to access this part of the application.</string>
    <string name="about_connected">Yes, you are online, the internet connection is available.</string>
    <string name="connected">Connected</string>
</resources>